syntax = "proto3";

// [#protodoc-title: Metrics service]

package envoy.config.wasm.v2;

import "envoy/api/v2/core/base.proto";

import "validate/validate.proto";

// Wasm is configured as a built-in *envoy.wasm_service* :ref:`WasmConig
// <envoy_api_msg_config.wasm.v2.WasmConfig>`. This opaque configuration will be used to create
// a Wasm Service.
message WasmConfig {
  // The Wasm VM.
  string vm = 1;
  // The Wasm code that Envoy will execute.
  envoy.api.v2.core.DataSource code = 2;
  // The Wasm configuration string used on initialization.
  string configuration = 3;
  // Allow the wasm_file to include pre-compiled code.
  bool allow_precompiled = 4;
  // If not zero, setup a periodic timer to call tick() in the Wasm VM.
  int64 tick_timeout_milliseconds = 5;
}
